[project]
name = "reddit-intent-leads"
version = "0.1.0"
description = "Find high-intent Reddit leads and export actionable lists."
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
authors = [{name = "Shine"}]
dependencies = [
  "typer>=0.12.0",
  "rich>=13.7.0",
]

[project.scripts]
rilf = "reddit_intent_leads.cli:app"

[tool.ruff]
line-length = 110

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.uv]
